added default router

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
                 </select>
             </div>
             <div class="col-6 text-right">
-                <span class="mr-4">Register</span>
-                <span class="mr-4">Sign In</span>
+                <span class="mr-4"><a routerLink="/home">Home</a></span>
+                <span class="mr-4"><a routerLink="/about">About</a></span>
                 <span><select>
                         <option>Empty</option>
                     </select></span>
