added edit and delete functionality

--- a/src/app/home/add-emp/add-emp.component.html
+++ b/src/app/home/add-emp/add-emp.component.html
@@ -1,5 +1,6 @@
-<p>add-emp works!</p>
-<button routerLink="/home" class="btn btn-secondary btn-sm align-items-right">Home</button>
+<div class="mt-4"><button routerLink="/home" class="btn btn-primary btn-sm align-items-right float-right">
+  Home
+</button><div class="clearfix"></div> </div>
 
 <!-- <form class="form-inline">
 <div class="form-group">
@@ -8,34 +9,83 @@
 </div>
 </form> -->
 
-
 <form name="addEmpForm" #addEmpForm="ngForm">
-    <div class="form-group">
-      <label for="name">Name*</label>
-      <input type="text" class="form-control" id="name" name="name" required placeholder="Enter Name" [(ngModel)]="employee.name" #name="ngModel">
-          </div>
-    <div class="form-group">
-      <label for="salary">Salary*</label>
-      <input type="number" class="form-control" id="salary" name="salary" placeholder="Enter Salary" required [(ngModel)]="employee.salary">
-    </div>
+  <div class="form-group">
+    <label for="name">Name*</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      name="name"
+      required
+      placeholder="Enter Name"
+      [(ngModel)]="employee.name"
+      #name="ngModel"
+    />
+    <div *ngIf="name.errors && name.touched" class="invalid-feedback1">Name is required</div>
+  </div>
+  <div class="form-group">
+    <label for="salary">Salary*</label>
+    <input
+      type="number"
+      class="form-control"
+      id="salary"
+      name="salary"
+      placeholder="Enter Salary"
+      required
+      [(ngModel)]="employee.salary"
+      #salary="ngModel"
+    />
+    <div *ngIf="salary.errors && salary.touched" class="invalid-feedback1">Salary is required</div>
+  </div>
 
-    <div class="form-group">
-        <label for="age">Age*</label>
-        <input type="number" class="form-control" id="age" name="age" placeholder="Enter Age" required [(ngModel)]="employee.age">
-            </div>
-      <div class="form-group">
-        <label for="profile">Profile Image*</label>
-        <input type="file" class="form-control" id="profile" name="profile" placeholder="Enter Profile" required [(ngModel)]="employee.profile" accept=".jpg, .gif, .png"  >
-      </div>
-  
+  <div class="form-group">
+    <label for="age">Age*</label>
+    <input
+      type="number"
+      class="form-control"
+      id="age"
+      name="age"
+      placeholder="Enter Age"
+      required
+      [(ngModel)]="employee.age"
+      #age="ngModel"
+    />
+    <div *ngIf="age.errors && age.touched" class="invalid-feedback1">Age is required</div>
+  </div>
+  <div class="form-group">
+    <label for="profile">Profile Image*</label>
+    <input
+      type="file"
+      class="form-control"
+      id="profile"
+      name="profile"
+      placeholder="Enter Profile"
+            [(ngModel)]="employee.profile"
+      accept=".jpg, .gif, .png"
+      #profile="ngModel"
+    />
+    <div *ngIf="profile.errors && profile.touched" class="invalid-feedback1">Profile is required</div>
+  </div>
 
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" required id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">I Agree</label>
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="valid" (click)="addEmployee(addEmpForm)">Submit</button>
-  </form>
-{{employee|json}}
+  <div class="form-group form-check">
+    <input
+      type="checkbox"
+      class="form-check-input"
+      required
+      id="exampleCheck1"
+    />
+    <label class="form-check-label" for="exampleCheck1">I Agree</label>
+  </div>
+  <button
+    type="submit"
+    class="btn btn-primary"
+    [disabled]="addEmpForm.form.invalid"
+    (click)="addEmployee(addEmpForm)"
+  >
+    Submit
+  </button>
+</form>
+{{ employee | json }}
 <button (click)="toggle()">Click</button>
 <div [hidden]="show">For test</div>
-
