--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<p>home works!</p>
-<button routerLink="/addEmp">
+<div class="text-right mt-4"><button routerLink="/addEmp" class="btn btn-info btn-md">
     Add new employee
-</button>
-<table class="table table-striped">
+</button></div>
+<div class="clearfix"></div>
+<table class="table table-striped mt-3">
     <thead>
     <tr>
         <th>Employee Id</th>
@@ -20,7 +20,22 @@
     <td>{{emp.employee_salary}}</td>
     <td>{{emp.employee_age}}</td>
     <td><img src="{{emp.profile_image}}" style="{width:100px, border:1px solid #ccc}"></td>
-    <td><button routerLink="/editEmp">Edit</button><button>Delete</button></td>
+    <td><button routerLink="/editEmp/{{emp.id}}" class="btn btn-primary btn-sm mr-2">Edit</button>
+        <button class="btn btn-danger btn-sm" (click)="openModal(template, emp)">Delete</button></td>
     </tr>
 </tbody>
 </table>
+<!-- <app-modal></app-modal> -->
+<ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Delete User</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      Are You Sure Want To Delete the User:{{selectedEmp.employee_name}}
+      <button type="button" class="btn btn-default" (click)="confirm(selectedEmp.id)" >Yes</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+    </div>
+  </ng-template>
